# CMake_Qt_Example

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.ui  main.cpp
